# 42

42_minishell/: .gitignore  Makefile  builtins_first.c  builtins_sec.c  command.c  command_utils.c  command_utils2.c  env.c  error.c  main.c  minishell.h  multidimensional.c  multidimensional_utils.c
42_minishell/42_libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
42_minishell/parsing/: dollar_sign.c  dollar_sign2.c  free.c  loop.c  parsing.c  parsing.h  print_test.c  prompt.c  redirection_no_spaces.c  redirection_token.c  signals.c  (+3 more)
cloud-1/: .gitignore  README.md  ansible.cfg  deploy.yml  provision.yml  reboot.yml  teardown.yml
cub3d/: Makefile  README.md
webserv/: .clang-format  .gitignore  Dockerfile  Makefile  default.conf  docker-compose.yml  long_test.txt  main.cpp
webserv/Tests/unit/: CMakeLists.txt  Duplicate.conf  HashTest.cpp  NoPathForLocation.conf  NoServerBlock.conf  RequestHeaderParserTests.cpp  RequestMultipartBodyParserTests.cpp  ServerRequestParserHelpersTests.cpp  ServerRequestParserTests.cpp  ServerResponseTests.cpp  data.txt  goodconfig.conf  parser_test.cpp  unit_test.conf
(+259 files in other folders)
